Add .gif files to jar file.

--- a/build.xml
+++ b/build.xml
@@ -104,6 +104,7 @@
                 <include name="*.xsl"/>
                 <include name="*.xsd"/>
                 <include name="*.css"/>
+                <include name="*.gif"/>
             </fileset>
         </copy>
     </target>
