--- a/build.xml
+++ b/build.xml
@@ -170,14 +170,39 @@
     
     <target name="dist-package" depends="dist, prepare-package">
 	<mkdir dir="${package.dir}/japex-${release.impl.version}-b${build.id}"/>
+	<mkdir dir="${package.dir}/japex-${release.impl.version}-b${build.id}/docs"/>
+	<mkdir dir="${package.dir}/japex-${release.impl.version}-b${build.id}/samples"/>
+	<mkdir dir="${package.dir}/japex-${release.impl.version}-b${build.id}/src"/>
+
 	<copy todir="${package.dir}/japex-${release.impl.version}-b${build.id}">
-            <fileset dir="./dist">
+            <fileset dir="${basedir}/dist">
                 <include name="**/*"/>
             </fileset>
             <fileset dir="${basedir}">
                 <include name="*.txt"/>
             </fileset>
 	</copy>
+
+	<copy todir="${package.dir}/japex-${release.impl.version}-b${build.id}/docs">
+            <fileset dir="${basedir}/docs">
+                <include name="**/*"/>
+            </fileset>
+	</copy>
+	<copy todir="${package.dir}/japex-${release.impl.version}-b${build.id}/samples">
+            <fileset dir="${basedir}/samples">
+                <include name="**/*"/>
+            </fileset>
+	</copy>
+
+        <!-- Include sources but not build file or resources -->
+        <zip destfile="${package.dir}/japex-${release.impl.version}-b${build.id}/src.zip">
+            <fileset dir="${basedir}/src">
+                <exclude name="**/CVS"/>
+            </fileset>
+        </zip>
+	<move file="${package.dir}/japex-${release.impl.version}-b${build.id}/src.zip"
+              todir="${package.dir}/japex-${release.impl.version}-b${build.id}/src"/>
+
         <zip destfile="${package.dir}/japex-${release.impl.version}-b${build.id}.zip">
             <fileset dir="${package.dir}">
                 <include name="japex-${release.impl.version}-b${build.id}/**/*"/>
@@ -186,6 +211,7 @@
 	<delete dir="${package.dir}/japex-${release.impl.version}-b${build.id}"/>
     </target>
 
-    <target name="package" depends="dist-package"/>
+    <target name="package" depends="dist-package" 
+       description="Creates a downloadable package with binaries, docs and samples"/>
 
 </project>
