Committing support for native (C) drivers as well as sample that shows how to use them.

--- a/build.xml
+++ b/build.xml
@@ -50,6 +50,11 @@
         <pathelement location="dist/${app.jar}"/>
     </path>
     
+    <path id="jni.class.path">
+        <path refid="compile.class.path"/>
+        <pathelement location="build/classes"/>
+    </path>
+    
     <target name="clean">
         <delete dir="dist"/>
         <delete dir="build"/>
