--- a/samples/FastInfoset/build.xml
+++ b/samples/FastInfoset/build.xml
@@ -14,4 +14,22 @@
             <arg line="${config}/"/>
         </java>
     </target>
+    
+    <target name="debug-nb">
+        <path id="cp">
+            <path refid="class.path"/>
+        </path>
+        <nbjpdastart addressproperty="jpda.address" name="Japex" transport="dt_socket">
+            <classpath refid="cp"/>
+        </nbjpdastart>
+        <java classname="com.sun.japex.Japex" fork="true">
+            <classpath refid="cp"/>
+            <jvmarg value="-Xdebug"/>
+            <jvmarg value="-Xnoagent"/>
+            <jvmarg value="-Djava.compiler=none"/>
+            <jvmarg value="-Xrunjdwp:transport=dt_socket,address=${jpda.address}"/>
+            <arg line="${config}"/>
+        </java>
+    </target>
+    
 </project>
