--- a/build.xml
+++ b/build.xml
@@ -14,7 +14,7 @@
     <property name="package.dir" value="package"/>
     <property name="build.number" value=""/>
     <property name="build.id" value="${DSTAMP}-${TSTAMP}"/>
-    <property name="release.impl.version" value="1.0"/>
+    <property name="release.impl.version" value="1.0.5"/>
 
     <!-- task that generates a manifest file -->
     <macrodef name="createManifest">
@@ -221,7 +221,7 @@
 	<move file="${package.dir}/japex-${release.impl.version}-b${build.id}/src.zip"
               todir="${package.dir}/japex-${release.impl.version}-b${build.id}/src"/>
 
-        <zip destfile="${package.dir}/japex-${release.impl.version}-b${build.id}.zip">
+        <zip destfile="${package.dir}/japex.zip">
             <fileset dir="${package.dir}">
                 <include name="japex-${release.impl.version}-b${build.id}/**/*"/>
             </fileset>
