--- a/build.xml
+++ b/build.xml
@@ -16,7 +16,7 @@
     <property name="package.dir" value="package"/>
     <property name="build.number" value=""/>
     <property name="build.id" value="${DSTAMP}-${TSTAMP}"/>
-    <property name="release.impl.version" value="1.0.14"/>
+    <property name="release.impl.version" value="1.0.15"/>
 
     <!-- task that generates a manifest file -->
     <macrodef name="createManifest">
@@ -133,7 +133,7 @@
             </fileset>
         </copy>
 	<chmod perm="ugo+x">
-            <fileset dir="bin">
+            <fileset dir="dist/bin">
                 <include name="*.sh"/>
                 <include name="*.bat"/>
             </fileset>
