--- a/build.xml
+++ b/build.xml
@@ -10,31 +10,31 @@
     <property name="jdsl-dir" value="${basedir}/lib/jdsl/"/>
 
     <tstamp>
-	<format property="TSTAMP" pattern="hhmmss"/>
+        <format property="TSTAMP" pattern="hhmmss"/>
     </tstamp>
 
     <property name="package.dir" value="package"/>
     <property name="build.number" value=""/>
     <property name="build.id" value="${DSTAMP}-${TSTAMP}"/>
-    <property name="release.impl.version" value="1.0.15"/>
+    <property name="release.impl.version" value="1.0.16"/>
 
     <!-- task that generates a manifest file -->
     <macrodef name="createManifest">
         <attribute name="file"/>
-      <sequential>
-        <copy tofile="@{file}"
+        <sequential>
+            <copy tofile="@{file}"
             file="./resources/manifest.mf"
             overwrite="yes"/>
-        <replace file="@{file}">
-            <replacefilter token="@@@@IMPL_VERSION@@@@"
-                   value="${release.impl.version}"/>
-            <replacefilter token="@@@@VENDOR_ID@@@@"
-                   value="com.sun"/>
-            <replacefilter token="@@@@BUILD_ID@@@@"
-                   value="${build.id}"/>
-            <replacefilter token="@@@@BUILD_NUMBER@@@@"
-                   value="${build.number}"/>
-        </replace>
+            <replace file="@{file}">
+                <replacefilter token="@@@@IMPL_VERSION@@@@"
+                value="${release.impl.version}"/>
+                <replacefilter token="@@@@VENDOR_ID@@@@"
+                value="com.sun"/>
+                <replacefilter token="@@@@BUILD_ID@@@@"
+                value="${build.id}"/>
+                <replacefilter token="@@@@BUILD_NUMBER@@@@"
+                value="${build.number}"/>
+            </replace>
         </sequential>
     </macrodef>
 
@@ -45,7 +45,7 @@
     
     <path id="compile.jdsl.class.path">
         <fileset dir="${jdsl-dir}" includes="*.jar"/>
-	<path refid="compile.class.path"/>
+        <path refid="compile.class.path"/>
     </path>
 
     <path id="class.path">
@@ -124,7 +124,7 @@
         <mkdir dir="dist/lib"/>
         <mkdir dir="dist/jdsl"/>
         
-	<createManifest file="${basedir}/build/manifest.rt"/>
+        <createManifest file="${basedir}/build/manifest.rt"/>
 
         <copy todir="dist/bin/">
             <fileset dir="bin">
@@ -132,17 +132,17 @@
                 <include name="*.bat"/>
             </fileset>
         </copy>
-	<chmod perm="ugo+x">
+        <chmod perm="ugo+x">
             <fileset dir="dist/bin">
                 <include name="*.sh"/>
                 <include name="*.bat"/>
             </fileset>
-	</chmod>
+        </chmod>
 
         <jar jarfile="dist/lib/${app.jar}" 
-             basedir="build/classes/"
-             excludes="com/sun/japex/jdsl/**"
-	     manifest="${basedir}/build/manifest.rt"/>
+        basedir="build/classes/"
+        excludes="com/sun/japex/jdsl/**"
+        manifest="${basedir}/build/manifest.rt"/>
         <copy todir="dist/lib/">
             <fileset dir="lib/jwsdp">
                 <include name="*.jar"/>
@@ -155,9 +155,9 @@
         </copy>
 
         <jar jarfile="dist/jdsl/jdsl.jar" 
-             basedir="build/classes/"
-             includes="com/sun/japex/jdsl/**"
-	     manifest="${basedir}/build/manifest.rt"/>
+        basedir="build/classes/"
+        includes="com/sun/japex/jdsl/**"
+        manifest="${basedir}/build/manifest.rt"/>
         <copy todir="dist/jdsl/">
             <fileset dir="lib/jdsl">
                 <include name="*.jar"/>
@@ -178,43 +178,43 @@
     </target>
     
     <!-- 
-      - Hudson packages: build.id is passed by the Hudson script:
-      -->
+    - Hudson packages: build.id is passed by the Hudson script:
+    -->
     <target name="clean-package">
         <delete dir="${package.dir}"/>
     </target>
 
     <target name="prepare-package">
-	<mkdir dir="${package.dir}"/>
+        <mkdir dir="${package.dir}"/>
     </target>
     
     <target name="dist-package" depends="dist, prepare-package">
-	<mkdir dir="${package.dir}/japex"/>
-	<mkdir dir="${package.dir}/japex/docs"/>
-	<mkdir dir="${package.dir}/japex/samples"/>
-	<mkdir dir="${package.dir}/japex/src"/>
+        <mkdir dir="${package.dir}/japex"/>
+        <mkdir dir="${package.dir}/japex/docs"/>
+        <mkdir dir="${package.dir}/japex/samples"/>
+        <mkdir dir="${package.dir}/japex/src"/>
 
         <touch file="${package.dir}/japex/JAPEX_${release.impl.version}-b${build.id}"/>
         
-	<copy todir="${package.dir}/japex">
+        <copy todir="${package.dir}/japex">
             <fileset dir="${basedir}/dist">
                 <include name="**/*"/>
             </fileset>
             <fileset dir="${basedir}">
                 <include name="*.txt"/>
             </fileset>
-	</copy>
+        </copy>
 
-	<copy todir="${package.dir}/japex/docs">
+        <copy todir="${package.dir}/japex/docs">
             <fileset dir="${basedir}/docs">
                 <include name="**/*"/>
             </fileset>
-	</copy>
-	<copy todir="${package.dir}/japex/samples">
+        </copy>
+        <copy todir="${package.dir}/japex/samples">
             <fileset dir="${basedir}/samples">
                 <include name="**/*"/>
             </fileset>
-	</copy>
+        </copy>
 
         <!-- Include sources but not build file or resources -->
         <zip destfile="${package.dir}/japex/src.zip">
@@ -222,22 +222,22 @@
                 <exclude name="**/CVS"/>
             </fileset>
         </zip>
-	<move file="${package.dir}/japex/src.zip"
-              todir="${package.dir}/japex/src"/>
+        <move file="${package.dir}/japex/src.zip"
+        todir="${package.dir}/japex/src"/>
 
         <zip destfile="${package.dir}/japex.zip">
             <fileset dir="${package.dir}">
                 <include name="japex/**/*"/>
             </fileset>
-	</zip>
-	<delete dir="${package.dir}/japex"/>
+        </zip>
+        <delete dir="${package.dir}/japex"/>
     </target>
 
     <target name="package" depends="dist-package" 
-       description="Creates a downloadable package with binaries, docs and samples"/>
+    description="Creates a downloadable package with binaries, docs and samples"/>
 
     <target name="push-to-maven-prepare" depends="dist"
-        description="prepare a repository iamge for the push-to-maven target">
+        description="Prepare a repository image for the push-to-maven target">
         <taskdef resource="maven-repository-importer.properties">
             <classpath>
                 <pathelement path="tools/lib/maven-repository-importer.jar" />
@@ -263,7 +263,7 @@
         <attribute name="cvsroot"/>
         <sequential>
             <tstamp />
-            <echo>importing to CVS...</echo>
+            <echo>Importing to CVS ...</echo>
             <cvs dest="@{src}">
                 <commandline>
                     <argument value="-d@{cvsroot}"/>
@@ -280,10 +280,17 @@
         </sequential>
     </macrodef>
   
+    <!-- 
+      - Define a build.properties file in your home directory
+      - as follows:
+      - maven.proxy.host=...
+      - maven.proxy.port=...
+      - java.net.user.name=...
+      -->
     <target name="push-to-maven" depends="push-to-maven-prepare"
-        description="publish artifacts into the maven repository">
-        <echo>importing to CVS...</echo>
-        <cvs-import src="build/maven-repo" dest="japex/repo" cvsroot=":pserver:${java.net.user.name}@kohsuke.sfbay.sun.com:/cvs" />
+        description="Publish artifacts into the maven repository">
+        <cvs-import src="build/maven-repo" dest="japex/repo" 
+            cvsroot=":pserver:${java.net.user.name}@java-net-cvs.east.sun.com:/cvs" />
     </target>
 
 </project>
