--- a/samples/FastInfoset/build.xml
+++ b/samples/FastInfoset/build.xml
@@ -35,4 +35,36 @@
         </java>
     </target>
     
+    <target name="debug-nb-trendreport">
+        <property name="src.folders" value="./src:./src/binding:../../src:../../src/binding"/>
+        <path id="cp">
+            <pathelement location="../../build/classes"/>
+            <path refid="class.path"/>
+        </path>
+        <nbjpdastart addressproperty="jpda.address" name="Japex" transport="dt_socket">
+            <classpath refid="cp"/>
+        </nbjpdastart>
+        <java classname="com.sun.japex.TrendReport" fork="true">
+            <classpath refid="cp"/>
+            <jvmarg value="-Xdebug"/>
+            <jvmarg value="-Xnoagent"/>
+            <jvmarg value="-Djava.compiler=none"/>
+            <jvmarg value="-Xrunjdwp:transport=dt_socket,address=${jpda.address}"/>
+            <arg line="-overwrite"/>
+            <arg value="FastInfoset Sample Trend Report"/>
+            <arg line="reports"/>
+            <arg line="reports/trends"/>
+        </java>
+    </target>
+    
+    <target name="generate-trends">
+        <java dir="." fork="true" classname="com.sun.japex.TrendReport">
+            <classpath refid="class.path"/>
+            <arg line="-overwrite"/>
+            <arg value="FastInfoset Sample Trend Report"/>
+            <arg line="reports"/>
+            <arg line="reports/trends"/>
+        </java>
+    </target>    
+    
 </project>
