--- a/core/pom.xml
+++ b/core/pom.xml
@@ -41,6 +41,30 @@
                     <target>1.5</target>
                 </configuration>
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-assembly-plugin</artifactId>
+                <version>2.2</version>
+                <executions>
+                    <execution>
+                        <id>make-assembly</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>single</goal>
+                        </goals>
+                        <configuration>
+			    <appendAssemblyId>false</appendAssemblyId>
+			    <finalName>japex</finalName>
+                            <ignoreDirFormatExtensions>true</ignoreDirFormatExtensions>
+                            <tarLongFileMode>gnu</tarLongFileMode>
+			    <descriptors>
+			      <descriptor>src/main/assembly/binary.xml</descriptor>
+			    </descriptors>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+
         </plugins>
         <pluginManagement>
             <plugins>
@@ -49,6 +73,18 @@
                     <artifactId>maven-resources-plugin</artifactId>
                     <version>2.4.3</version>
                 </plugin>
+		<plugin>
+		  <groupId>org.apache.maven.plugins</groupId>
+		  <artifactId>maven-jar-plugin</artifactId>
+		  <version>2.3.1</version>
+		  <configuration>
+		    <archive>
+		      <manifest>
+			<addClasspath>true</addClasspath>
+		      </manifest>
+		    </archive>
+		  </configuration>
+		</plugin>
             </plugins>
         </pluginManagement>
     </build>
